--- a/header.html
+++ b/header.html
@@ -5,23 +5,28 @@
     <ul>
       <li><a href="../index.html">Início</a></li>
       <li><a href="../filmes.html">Filmes</a></li>
-      <li><a href="#">Séries</a></li>
+      <li><a href="serie.html">Séries</a></li>
     </ul>
   </nav>
 </header>
+
+
 <aside class="sidebar" id="sidebar">
   <ul>
-    <li class="categoria">Filmes
-      <ul class="submenu">
-        <li><a href="#">Lançamentos</a></li>
-        <li><a href="#">Dublado</a></li>
-        <li><a href="#">Legendado</a></li>
-        <li><a href="#">Nacional</a></li>
-        <li><a href="#">Filmes de 2024</a></li>
-        <li><a href="#">Filmes de 2023</a></li>
-      </ul>
-    </li>
-    <li class="categoria">Séries
+<li class="categoria">
+  <span onclick="window.location.href='filmes.html'">Filmes</span>
+  <ul class="submenu">
+    <li><a href="#">Lançamentos</a></li>
+    <li><a href="#">Dublado</a></li>
+    <li><a href="#">Legendado</a></li>
+    <li><a href="#">Nacional</a></li>
+    <li><a href="#">Filmes de 2024</a></li>
+    <li><a href="#">Filmes de 2023</a></li>
+  </ul>
+</li>
+
+    <li class="categoria">
+<span onclick="window.location.href='serie.html'">Serie</span>
       <ul class="submenu">
         <li><a href="#">Lançamentos</a></li>
         <li><a href="#">Dublado</a></li>
